--- a/NCCBF-iOS/Storyboards/NCCBFTabBarController.storyboard
+++ b/NCCBF-iOS/Storyboards/NCCBFTabBarController.storyboard
@@ -20,6 +20,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="Dw5-zO-bDY" kind="relationship" relationship="viewControllers" id="RWm-qX-6pQ"/>
+                        <segue destination="aLe-DK-1ML" kind="relationship" relationship="viewControllers" id="TRt-O8-14M"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tx6-Ef-Buz" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -34,7 +35,17 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VbP-Zn-BYw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-372" y="-257"/>
+            <point key="canvasLocation" x="-374" y="-313"/>
+        </scene>
+        <!--MoreInfoNavigationController-->
+        <scene sceneID="xyr-Cq-JVC">
+            <objects>
+                <viewControllerPlaceholder storyboardName="MoreInfoTableViewController" referencedIdentifier="MoreInfoNavigationController" id="aLe-DK-1ML" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="IsK-wx-Zlm"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gor-x9-qlA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-374" y="-209"/>
         </scene>
     </scenes>
 </document>
