--- a/NCCBF-iOS/Base.lproj/LaunchScreen.storyboard
+++ b/NCCBF-iOS/Base.lproj/LaunchScreen.storyboard
@@ -33,11 +33,20 @@
                                 </constraints>
                                 <color key="barTintColor" red="0.95686274510000002" green="0.54901960780000003" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
                             </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NCCBF-2017-logo-image" translatesAutoresizingMaskIntoConstraints="NO" id="wvm-mN-Y9V">
+                                <rect key="frame" x="43" y="189" width="288" height="288"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="288" id="kLB-DI-BJZ"/>
+                                    <constraint firstAttribute="height" constant="288" id="lu6-8V-GSR"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="pAV-rN-NUj" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Hy0-eu-khx"/>
+                            <constraint firstItem="wvm-mN-Y9V" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Kjb-pl-Eqf"/>
                             <constraint firstAttribute="trailing" secondItem="PtP-Fc-9MR" secondAttribute="trailing" id="aoY-a3-4Yx"/>
+                            <constraint firstItem="wvm-mN-Y9V" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="mbD-yQ-jfg"/>
                             <constraint firstAttribute="trailing" secondItem="pAV-rN-NUj" secondAttribute="trailing" id="nGb-G3-xGe"/>
                             <constraint firstItem="PtP-Fc-9MR" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="uHN-lS-q8n"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="PtP-Fc-9MR" secondAttribute="bottom" id="vha-tL-1cm"/>
@@ -50,4 +59,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NCCBF-2017-logo-image" width="16" height="16"/>
+    </resources>
 </document>
