--- a/NCCBF-iOS/Storyboards/EventCatalogTableViewController.storyboard
+++ b/NCCBF-iOS/Storyboards/EventCatalogTableViewController.storyboard
@@ -21,17 +21,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kFC-l5-LHV">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kFC-l5-LHV">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EventCatalogTableViewCell.Type" id="4wR-v8-WLb" customClass="EventCatalogTableViewCell" customModule="NCCBF_iOS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4wR-v8-WLb" id="nGy-XO-tPT">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mm6-uv-Byo" customClass="ThumbnailView" customModule="NCCBF_iOS" customModuleProvider="target">
+                                                    <rect key="frame" x="20" y="5" width="88" height="88"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="88" id="Lc1-aA-sbg"/>
+                                                        <constraint firstAttribute="height" constant="88" id="VfW-Px-XcB"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06D-ds-u5O">
+                                                    <rect key="frame" x="128" y="39" width="44.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Mm6-uv-Byo" firstAttribute="centerY" secondItem="nGy-XO-tPT" secondAttribute="centerY" id="Hu6-Yf-lHD"/>
+                                                <constraint firstItem="06D-ds-u5O" firstAttribute="leading" secondItem="Mm6-uv-Byo" secondAttribute="trailing" constant="20" id="Ml3-cx-xgl"/>
+                                                <constraint firstItem="06D-ds-u5O" firstAttribute="centerY" secondItem="nGy-XO-tPT" secondAttribute="centerY" id="S2p-La-swK"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="06D-ds-u5O" secondAttribute="trailing" constant="20" id="X5l-zd-JUk"/>
+                                                <constraint firstItem="Mm6-uv-Byo" firstAttribute="leading" secondItem="nGy-XO-tPT" secondAttribute="leading" constant="20" id="s1f-LF-D9x"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="thumbnailView" destination="Mm6-uv-Byo" id="LIH-Z2-iDn"/>
+                                            <outlet property="titleLabel" destination="06D-ds-u5O" id="Cpx-Dt-6hM"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
