--- a/NCCBF-iOS/ScheduleTableViewController.storyboard
+++ b/NCCBF-iOS/ScheduleTableViewController.storyboard
@@ -29,12 +29,13 @@
                                     <segment title="Apr 15"/>
                                     <segment title="Apr 16"/>
                                 </segments>
+                                <color key="tintColor" red="0.91372549020000005" green="0.25490196079999999" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="segmentDidChange:" destination="DM7-1Y-esv" eventType="valueChanged" id="v12-Ck-dkw"/>
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kHy-ml-oQH">
-                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
+                                <rect key="frame" x="0.0" y="108" width="375" height="510"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScheduleTableViewCell.Type" id="fGW-ki-S1G" customClass="ScheduleTableViewCell" customModule="NCCBF_iOS" customModuleProvider="target">
