--- a/NCCBF-iOS/ScheduleTableViewController.storyboard
+++ b/NCCBF-iOS/ScheduleTableViewController.storyboard
@@ -52,8 +52,8 @@
                                                         <constraint firstAttribute="width" constant="1" id="sP5-6s-Wm4"/>
                                                     </constraints>
                                                 </view>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kEW-CX-rP9">
-                                                    <rect key="frame" x="95" y="15" width="42" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kEW-CX-rP9">
+                                                    <rect key="frame" x="95" y="14.5" width="42" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -80,6 +80,7 @@
                                                 </stackView>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="kEW-CX-rP9" secondAttribute="bottom" constant="4" id="Bze-0T-3gx"/>
                                                 <constraint firstItem="JCh-96-WUw" firstAttribute="top" secondItem="4TG-gc-Iuw" secondAttribute="top" constant="2" id="GAr-Ao-dTJ"/>
                                                 <constraint firstItem="cDD-ks-8eN" firstAttribute="centerY" secondItem="4TG-gc-Iuw" secondAttribute="centerY" id="HBI-Qg-XuH"/>
                                                 <constraint firstItem="JCh-96-WUw" firstAttribute="leading" secondItem="cDD-ks-8eN" secondAttribute="trailing" constant="8" id="RQD-4Q-saO"/>
@@ -89,6 +90,7 @@
                                                 <constraint firstItem="kEW-CX-rP9" firstAttribute="leading" secondItem="JCh-96-WUw" secondAttribute="trailing" constant="8" id="hVm-Wb-VYK"/>
                                                 <constraint firstItem="cDD-ks-8eN" firstAttribute="leading" secondItem="4TG-gc-Iuw" secondAttribute="leading" constant="20" id="qtZ-X6-up7"/>
                                                 <constraint firstItem="kEW-CX-rP9" firstAttribute="centerY" secondItem="4TG-gc-Iuw" secondAttribute="centerY" id="wau-qc-uOW"/>
+                                                <constraint firstItem="kEW-CX-rP9" firstAttribute="top" relation="greaterThanOrEqual" secondItem="4TG-gc-Iuw" secondAttribute="top" constant="4" id="yiW-rO-iaR"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
